--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -54,6 +54,10 @@
 		
 		<div id="contactable"><!-- contactable html placeholder --></div>
 		
+		<footer>
+			&copy; 2014 data.ac.uk
+		</footer>
+		
 	   </body>
 	  </html>
 <script type="text/javascript" src="//network-bar.data.ac.uk/network-bar.js"></script>
