--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -32,6 +32,8 @@
     <link rel="apple-touch-icon" href="http://network-bar.data.ac.uk/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="http://network-bar.data.ac.uk/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="http://network-bar.data.ac.uk/images/apple-touch-icon-114x114.png">
+	
+<link rel="stylesheet" href="/lib/CodeMirror/lib/codemirror.css">
 
 </head>
 <body>
