--- a/htdocs/ui/docs-social.html
+++ b/htdocs/ui/docs-social.html
@@ -1,3 +1,5 @@
+<include href='docs-menu.html' />
+
 <p>This page documents patterns to use to describe social network accounts used by your organisation. In addition to linking to the account the foaf:accountName and foaf:accountServiceHomepage make the information more specific.</p>
 
 <p>If the social network is not listed below, you can still use the same pattern for any social network account.</p>
