--- a/htdocs/ui/docs-datasets.html
+++ b/htdocs/ui/docs-datasets.html
@@ -19,3 +19,7 @@
     dcterms:conformsTo &lt;<span class='opd-var'>CONFIRMS-URL</span>&gt; ;
     dcterms:license &lt;<span class='opd-var'>LICENSE-URL</span>&gt; .</code>
 
+<h3>Recommended combinations of conformsTo &amp; subject</h3>
+
+TODO!
+
