--- a/htdocs/ui/docs-feeds.html
+++ b/htdocs/ui/docs-feeds.html
@@ -21,7 +21,7 @@
 
 <h3>Example</h3>
 
-<code class='block'>&lt;<span class='opd-var'>ORG-URI</span>&gt; a &lt;http://purl.org/xtypes/Document-<span class='opd-var'>FEED-TYPE</span>&gt;
+<code class='block'>&lt;<span class='opd-var'>FEED-URL</span>&gt; a &lt;http://purl.org/xtypes/Document-<span class='opd-var'>FEED-TYPE</span>&gt;
     oo:organization &lt;<span class='opd-var'>ORG-URI</span>&gt; ;
     dcterms:subject &lt;http://purl.org/openorg/theme/<span class='opd-var'>THEME</span>&gt; ;
     dcterms:license &lt;<span class='opd-var'>http://creativecommons.org/publicdomain/zero/1.0/</span>&gt; .
