--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -45,6 +45,7 @@
     <div class="sixteen columns padding_top_30 padding_bottom_20">
     <nav role="navigation" id="main-menu">
       <ul class="links inline clearfix">
+        <li class=""><a title="OPD Checker" href="/docs/core">Documentation</a></li>
         <li class=""><a title="OPD Checker" href="/checker">Checker</a></li>
         <li class=""><a title="Homepage" href="/">Homepage</a></li>
       </ul>
