--- a/htdocs/ui/workshop-gettingstarted.html
+++ b/htdocs/ui/workshop-gettingstarted.html
@@ -3,7 +3,7 @@
 
 <p>This workshop is designed to get you started by creating an OPD for you organisation.</p>
 
-<p>We will be using an online tool to help validate your OPD, you can find it here: <a href="http://opd.data.ac.uk/checker">http://opd.data.ac.uk/checker</a></p>
+<p>We will be using an online tool to help validate your OPD, you can find it here: <a href="/checker">http://opd.data.ac.uk/checker</a></p>
 
 <p>OPD's can be any RDF format, but in this workshop we will be using the Turtle format, as its simple to learn and easy to edit by hand. More info: <a href="http://en.wikipedia.org/wiki/Turtle_(syntax)">http://en.wikipedia.org/wiki/Turtle_(syntax)</a>  
 
@@ -109,7 +109,7 @@
 </code>
 
 <p>Note that each line except the last one ends with a ; and the last one ends with a .</p>
-<p>Check out the Core documentation for more information: <a href="http://opd.data.ac.uk/docs/core">http://opd.data.ac.uk/docs/core</a></p>
+<p>Check out the Core documentation for more information: <a href="/docs/core">http://opd.data.ac.uk/docs/core</a></p>
 
 <h2>Social Networks</h2>
 <p>Inorder to add social networks, first find the network account on our documentation page: <a href="/docs/social">http://opd.data.ac.uk/docs/social</a>
@@ -135,7 +135,6 @@
 <ul class="bullet-list">
 	<li>RSS Feeds: <a href="/docs/feeds" title="OPD Documentation: Feeds (RSS, iCal, Atom)">http://opd.data.ac.uk/docs/feeds</a></li>
 	<li>Key Pages: <a href="/docs/key-pages" title="OPD Documentation: Key Pages">http://opd.data.ac.uk/docs/key-pages</a></li>
-	<li>Datasets: <a href="/docs/datasets" title="OPD Documentation: Datasets">http://opd.data.ac.uk/docs/datasets</a></li>
 </ul>
 
 <h2>Autodiscovery </h2>
