Added more to documentation

--- a/htdocs/ui/docs-datasets.html
+++ b/htdocs/ui/docs-datasets.html
@@ -19,7 +19,41 @@
     dcterms:conformsTo &lt;<span class='opd-var'>CONFIRMS-URL</span>&gt; ;
     dcterms:license &lt;<span class='opd-var'>LICENSE-URL</span>&gt; .</code>
 
-<h3>Recommended combinations of conformsTo &amp; subject</h3>
+<h3>Recommended/example URI's'</h3>
 
-TODO!
+<h4>dcterms:subject</h4>
+
+<p>This descibes what the dataset is about with some example url:
+
+<ul class="bullet-list">
+	<li>http://purl.org/openorg/theme/Capability</li>
+	<li>http://purl.org/openorg/theme/Equipment</li>
+	<li>http://purl.org/openorg/theme/Facility</li>
+</ul>
+
+</p>
+
+<h4>dcterms:conformsTo</h4>
+
+<p>This descibes what the file format of the dataset is:
+
+<ul class="bullet-list">
+	<li>RDF: http://openorg.ecs.soton.ac.uk/wiki/Facilities_and_Equipment</li>
+	<li>Uniquip (as csv,tsv or Excel Spreadsheet): http://equipment.data.ac.uk/uniquip</li>
+	<li>Kit Catalogue: http://equipment.data.ac.uk/kitcat-items-json</li>
+	<li>N8 RDF: http://equipment.n8research.org.uk/research-equipment.html</li>
+</ul>
+</p>
+
+<h4>dcterms:license</h4>
+
+<p>This descibes what the license for the dataset:
+
+<ul class="bullet-list">
+	<li>OGL - The (UK) Open Government License for Public Sector Information: http://www.nationalarchives.gov.uk/doc/open-government-licence/</li>
+	<li>ODCA - Open Data Commons Attribution License: http://opendatacommons.org/licenses/by/</li>
+	<li>CC0 - Public Domain Dedication: http://creativecommons.org/publicdomain/zero/1.0/</li>
+</ul>
+
+</p>
 
