--- a/htdocs/ui/docs-menu.html
+++ b/htdocs/ui/docs-menu.html
@@ -1,4 +1,4 @@
-<div class='sub-menu'>
+<span class="noprint"><div class='sub-menu'>
 Documentation:
 <ul>
 <li><a href='/docs/core'>Core</a></li>
@@ -9,3 +9,11 @@ Documentation:
 <li><a href='/docs/datasets'>Datasets</a></li>
 </ul>
 </div>
+<div class='sub-menu'>
+Workshop:
+<ul>
+<li><a href='/workshops/getting_started'>Getting Started</a></li>
+</ul>
+</div>
+</span>
+
