--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -43,9 +43,9 @@
 
   <div class="container">
     <div class="sixteen columns padding_top_30 padding_bottom_20">
-    <nav role="navigation" id="main-menu">
+    <nav role="navigation" id="main-menu" class="noprint">
       <ul class="links inline clearfix">
-        <li class=""><a title="OPD Checker" href="/docs/core">Documentation</a></li>
+        <li class=""><a title="Documentation" href="/docs/core">Documentation</a></li>
         <li class=""><a title="OPD Checker" href="/checker">Checker</a></li>
         <li class=""><a title="Homepage" href="/">Homepage</a></li>
       </ul>
