--- a/htdocs/ui/welcome.html
+++ b/htdocs/ui/welcome.html
@@ -1,14 +1,71 @@
 
-<include href='docs-menu.html' />
+<!--include href='docs-menu.html' /-->
+
+<div class="container">        
+
+<div class="twelve columns"  >
 
 <h2>What is an Organisation Profile Document (OPD)?</h2>
-<p>To tell us where to find your equipment, facilities, capabilities data, and the license etc. you’ll need to create an organisation profile document. This is a simple RDF file which describes your organisation and open access documents.</p>
-<p>The examples we use in this page are all “Turtle” format but RDF+XML is OK too.</p>
-<p>You will require a ‘URI’ to refer to your organisation. You can either use your own, or use one from learning-provider.data.ac.uk. If you use your own, please include a owl: same as linking it to the learning-provider.data.ac.uk URI for your organisation. In our examples we use &lt;http://id.example.ac.uk/&gt; as the URI for your organisation. </p>
-<p><small><strong>sidebar:</strong> American spelling of ‘organization’? Yes, we use the American spelling in the data structures. Sorry if that annoys people, but we decided to keep the ‘z’ in all the semantics rather than have a muddle of UK and US spelling which is certain to create errors.</small></p>
-<div class="code">
-{{htmlentities(file_get_contents('examples/profile.ttl'));}}
+<p>The OPD contains the organisation's full name, homepage, logo, dataset location and contact information for the equipment dataset. To make your data discoverable using OPDs  you can  create one as it is a simple process and is a RDF file which describes your organisation and open access documents.</p>
+
+<ul class="bullet-list">
+	<li><a href="/docs/auto"> Auto-discovery</a></li>
+	<li>Documentation on how to create an OPD: 
+	<ul class="bullet-list" style="font-size:100%;">
+		<li><a href="/docs/core">Basic structure</a></li>
+		<li><a href="/docs/core#org_uri">Organisation URI</a></li>
+		<li><a href="/docs/core#prefixes">Prefixes</a></li>
+		<li><a href="/docs/core#docdesc">Document Description</a></li>
+		<li><a href="/docs/core#orgdesc">Organisation Description</a></li>
+		<li><a href="/docs/core#example">OPD example</a></li>
+	</ul>
+	</li>
+	<li>Documentation on how to extend an OPD with optional extras:
+	<ul class="bullet-list" style="font-size:100%;">
+		<li><a href="/docs/local">Locations</a></li>
+		<li><a href="/docs/social">Social Networks</a></li>
+		<li><a href="/docs/feeds">Feeds</a></li>
+		<li><a href="/docs/key-pages">Key pages</a></li>
+		<li><a href="/docs/datasets">Datasets</a></li>
+	</ul>
+
+	</li>
+	<li>Workshop – <a href="/workshops/getting_started">practical step-by-step guide to getting started with an OPD</a></li>
+</ul>
+<hr/>
+
+<h2>Organisations with an auto-discorable OPD</h2>
+<ul class='datasets'>
+	<F3:repeat group="{{ @opds }}" value="{{ @org }}">
+		<li><a href='{{ @org["org_url"] }}' title='{{ @org["org_name"] }}'><img src='{{ @org["org_logo"] }}'/></a></li>
+	</F3:repeat>
+</ul>
+        
 </div>
-<p>This isn’t everything that can go in a profile document, but it should be a summary of your organisation, not a complete data catalogue.</p>
-<p>We strongly recommend using a CC0 license (public domain dedication) for the organisational document. This makes it easy for 3rd parties to use it and combine many such documents without problems. It is very possible you won’t be willing to CC0 license your equipment data, but the profile document should not contain anything you don’t want widely and freely reused, so CC0 is appropriate for it.</p>
+
+
+
+<div class="four columns">
+	
+   
+    <div class="sidebox">
+    	<h3>Stats</h3>
+		<center>
+		<table style="min-width: 80%">
+			<tbody><tr>
+				<th>Organisations</th>
+				<td style="text-align: right;">{{ count(@opds) }}</td>
+			</tr>
+		
+		</tbody></table>
+	</center>
+	</div>
+		
+</div>
+
+
+
+ </div>
+
+
 
