--- a/htdocs/ui/welcome.html
+++ b/htdocs/ui/welcome.html
@@ -34,7 +34,7 @@
 </ul>
 <hr/>
 
-<h2>Organisations with an auto-discorable OPD</h2>
+<h2>Organisations with an auto-discoverable OPD</h2>
 <ul class='datasets'>
 	<F3:repeat group="{{ @opds }}" value="{{ @org }}">
 		<li><a href='{{ @org["org_url"] }}' title='{{ @org["org_name"] }}'><img src='{{ @org["org_logo"] }}'/></a></li>
