--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -17,10 +17,12 @@
   ================================================== -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<script src="/resources/jquery-1.9.1.js"></script>
+<!--script src="/resources/jquery-1.9.1.js"></script>
 <script src="/resources/jquery-ui.js"></script>
+<link rel="stylesheet" href="/resources/jquery-ui.css" /-->
+
 <link rel="stylesheet" href="http://network-bar.data.ac.uk/subsite.css" type="text/css">
-<link rel="stylesheet" href="/resources/jquery-ui.css" />
+
 <link rel="stylesheet" href="/resources/site.css">
     
     <!--[if lt IE 9]>
@@ -32,6 +34,7 @@
     <link rel="apple-touch-icon" href="http://network-bar.data.ac.uk/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="http://network-bar.data.ac.uk/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="http://network-bar.data.ac.uk/images/apple-touch-icon-114x114.png">
+
 	
 <link rel="stylesheet" href="/lib/CodeMirror/lib/codemirror.css">
 
