--- a/htdocs/ui/welcome.html
+++ b/htdocs/ui/welcome.html
@@ -37,7 +37,7 @@
 <h2>Organisations with an auto-discoverable OPD</h2>
 <ul class='datasets'>
 	<F3:repeat group="{{ @opds }}" value="{{ @org }}">
-		<li><a href='{{ @org["org_url"] }}' title='{{ @org["org_name"] }}'><img src='{{ @org["org_logo"] }}'/></a></li>
+		<li><a href='/org/{{ @org["org_id"] }}/{{ @org["org_url_name"] }}.html' title='{{ @org["org_name"] }}'><img src='/org/{{ @org["org_id"] }}/{{ @org["org_url_name"] }}.logo?size=small'/></a></li>
 	</F3:repeat>
 </ul>
         
@@ -47,6 +47,13 @@
 
 <div class="four columns">
 	
+	<div class="sidebox">
+	        <h3>Datasets</h3>
+        
+	        <h5>Discovered OPDs</h5>
+	        <div class="smallp"><a href="data/autoopds.json" class="fileicon json">JSON</a></div>
+	</div>
+			
    
     <div class="sidebox">
     	<h3>Stats</h3>
