--- a/htdocs/ui/welcome.html
+++ b/htdocs/ui/welcome.html
@@ -10,9 +10,9 @@
 
 <ul class="bullet-list">
 	<li><a href="/docs/auto"> Auto-discovery</a></li>
-	<li>Documentation on how to create an OPD: 
+	<li><a href="/docs/core"> Documentation on how to create an OPD: Basic structure</a>
 	<ul class="bullet-list" style="font-size:100%;">
-		<li><a href="/docs/core">Basic structure</a></li>
+		
 		<li><a href="/docs/core#org_uri">Organisation URI</a></li>
 		<li><a href="/docs/core#prefixes">Prefixes</a></li>
 		<li><a href="/docs/core#docdesc">Document Description</a></li>
