--- a/htdocs/ui/docs-menu.html
+++ b/htdocs/ui/docs-menu.html
@@ -1,13 +1,13 @@
 <span class="noprint"><div class='sub-menu'>
 Documentation:
 <ul>
-<li><a href='/docs/core'>Core</a></li>
+<li><a href='/docs/auto'>Auto-Discovery</a></li>
+<li><a href='/docs/core'>Basic Structure</a></li>
 <li><a href='/docs/local'>Locations</a></li>
 <li><a href='/docs/social'>Social Networks</a></li>
 <li><a href='/docs/feeds'>Feeds</a></li>
 <li><a href='/docs/key-pages'>Key Pages</a></li>
 <li><a href='/docs/datasets'>Datasets</a></li>
-<li><a href='/docs/auto'>Auto-Discovery</a></li>
 </ul>
 </div>
 <div class='sub-menu'>
