--- a/htdocs/ui/docs-feeds.html
+++ b/htdocs/ui/docs-feeds.html
@@ -1,15 +1,14 @@
 
 <include href='docs-menu.html' />
 
-<p>An "feed" for an organisation is generally one of the following:</p>
+<p>A "feed" for an organisation is generally one of the following:</p>
 
 <ul class='bullet-list'>
 <li>Events related to the organisation.</li>
-<li>News items from and about the organisation (This does not include sites which provide an actual news service). eg. Vice Chancellor opens new building.</li>
-<li>Notices from the organsiation. eg. Building 23 will be closed on May 4th for essential maintenance.</li>
+<li>News items from and about the organisation (This does not include sites which provide an actual news service). E.g. Vice Chancellor opens new building.</li>
+<li>Notices from the organsiation. E.g. Building 23 will be closed on 4th May for essential maintenance.</li>
 </ul>
-<p>There may be other kinds of feed.</p>
-<p>iCalendar data is probably not going to be news or notices, but please still mark it as <span class='opd-value'>events</span> for easy discovery.</p>
+<p>NB. iCalendar data is probably not going to be news or notices, but please still mark it as <span class='opd-value'>events</span> for easy discovery.</p>
 
 <h3>Prefixes</h3>
 
