--- a/htdocs/ui/docs-auto.html
+++ b/htdocs/ui/docs-auto.html
@@ -24,7 +24,7 @@ Which links to the profile document.</p>
 
 <h3>2. Well-known</h3>
 
-<p>This method uses a specific URL from your university homepage to link to the profile document; if your homepage is http://www.example.ac.uk then http://www.example.ac.uk/well-known/openorg should serve (or redirect to) your profile document.</p>
+<p>This method uses a specific URL from your university homepage to link to the profile document; if your homepage is http://www.example.ac.uk then http://www.example.ac.uk/.well-known/openorg should serve (or redirect to) your profile document.</p>
 
 
 <h3>Can’t do either of these methods?</h3>
