--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -11,7 +11,7 @@
   ================================================== -->
 <meta charset="utf-8">
       <title>{{ @html_title }}</title>
-<meta name="author" content="Christopher Gutteridge">
+<meta name="author" content="Data.ac.uk">
 
 <!-- Mobile Specific Metas
   ================================================== -->
