--- a/htdocs/ui/welcome.html
+++ b/htdocs/ui/welcome.html
@@ -52,6 +52,11 @@
         
 	        <h5>Discovered OPDs</h5>
 	        <div class="smallp"><a href="data/autoopds.json" class="fileicon json">JSON</a></div>
+			
+	        <h5>Exported OPD Data</h5>
+	        <div class="smallp"><a href="data/exportopds.json" class="fileicon json">JSON</a></div>
+	        <div class="smallp"><a href="data/exportopds.csv" class="fileicon csv">CSV</a></div>
+
 	</div>
 			
    
