--- a/htdocs/ui/docs-key-pages.html
+++ b/htdocs/ui/docs-key-pages.html
@@ -33,6 +33,6 @@
     lyou:about &lt;http://www.example.ac.uk/about-us.html&gt;
     lyou:events &lt;http://www.example.ac.uk/events/&gt;
     lyou:conferences &lt;http://www.example.ac.uk/conference-and-hospitality/conferences.html&gt;
-    lyou:undergraduatae &lt;http://www.example.ac.uk/study-here.html&gt;
+    lyou:undergraduate &lt;http://www.example.ac.uk/study-here.html&gt;
     lyou:international-students &lt;http://www.example.ac.uk/students/international.html&gt; .
 </code>
