--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -66,6 +66,7 @@
 		
 	   </body>
 	  </html>
+	  
 <script type="text/javascript" src="//network-bar.data.ac.uk/network-bar.js"></script>
 <!--start contactable -->
 
@@ -77,3 +78,14 @@
 	$(function(){$('#contactable').contactable({productKey: 'opd.data', extra: tracking});});
 </script>
 <!--end contactable -->
+
+<script type="text/javascript">
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-39143407-1', 'auto', {'legacyCookieDomain': 'opd.data.ac.uk'});  // Replace with your property ID.
+ga('send', 'pageview');
+
+</script>
