--- a/htdocs/ui/page-template.html
+++ b/htdocs/ui/page-template.html
@@ -61,7 +61,7 @@
 		<div id="contactable"><!-- contactable html placeholder --></div>
 		
 		<footer>
-			&copy; 2014 data.ac.uk
+			&copy; 2015 data.ac.uk - This site uses cookies for Google Analytics.
 		</footer>
 		
 	   </body>
