Changed general info
data.ac.uk to equipment.data.ac.uk
and andy@data.ac.uk to support@data.ac.uk

--- a/htdocs/ui/docs-auto.html
+++ b/htdocs/ui/docs-auto.html
@@ -14,7 +14,7 @@
 
 <h2>How does autodiscovery work?</h2>
 
-<p>We offer two ways to get data.ac.uk to discover your profile document.</p>
+<p>We offer two ways to get equipment.data.ac.uk to discover your profile document.</p>
 
 <h3>1. &lt;link&gt; header</h3>
 
@@ -29,4 +29,4 @@ Which links to the profile document.</p>
 
 <h3>Can’t do either of these methods?</h3>
 
-<p>We understand that the team providing equipment and facilities data for your organisation won’t always be working hand-in-glove with the team that run the homepage and main website. If the above methods are impractical for you, drop our admin a line at andy@data.ac.uk and they will manually register the URL of your profile document.</p>
+<p>We understand that the team providing equipment and facilities data for your organisation won’t always be working hand-in-glove with the team that run the homepage and main website. If the above methods are impractical for you, drop our admin a line at support@data.ac.uk and they will manually register the URL of your profile document.</p>
