--- a/htdocs/ui/welcome.html
+++ b/htdocs/ui/welcome.html
@@ -72,6 +72,12 @@
 	        <h5>Exported OPD Data</h5>
 	        <div class="smallp"><a href="data/exportopds.json" class="fileicon json">JSON</a></div>
 	        <div class="smallp"><a href="data/exportopds.csv" class="fileicon csv">CSV</a></div>
+			
+	        <h5>Browse By</h5>
+	        <div class="smallp"><a href="/dataset/core" class="fileicon">Core Details</a></div>
+	        <div class="smallp"><a href="/dataset/social" class="fileicon">Social Media</a></div>
+	        <div class="smallp"><a href="/dataset/linkingyou" class="fileicon">Linking You</a></div>
+			
 
 	</div>
 			
